# gutenfries.com

./: .eslintignore  .eslintrc.js  .gitignore  .hintrc  .markdownlint.json  .prettierrc.js  .rustfmt.toml  Cargo.toml  Dockerfile  LICENSE.md  README.md  TODO.md  bindings.json  deno.json  dev.ts  fresh.config.ts  fresh.gen.ts  graphql.config.js  import_map.json  jest.config.js  main.ts  netlify.toml  package.json  pdf_test.ts  prettier.config.js  redwood.toml  routes.ts  rust-toolchain.toml  tailwind.config.js  tailwind.config.ts  tsconfig.json  twind.config.ts
.devcontainer/: Dockerfile  devcontainer.json
.obsidian/: app.json  appearance.json
_posts/: preview.md
api/: jest.config.js  package.json  server.config.js
bindings/: bindings.ts
components/: App.tsx  BlogPostPreview.tsx  Card.tsx  Container.tsx  ContentCard.tsx  ContentPicker.tsx  DesktopNav.tsx  Footer.tsx  GlassCard.tsx  GradientBackground.tsx  Head.tsx  Icons.tsx  ImageCard.tsx  ImageCarousel.tsx  Link.tsx  MarcCard.tsx  Navbar.tsx  NoScript.tsx  NotFoundHead.tsx  RecentActivityCard.tsx  SnareAnimation.tsx  SocialLinks.tsx  TechCard.tsx  alert.tsx  container.tsx  cover-image.tsx  footer.tsx  header.tsx  hero-post.tsx  intro.tsx  meta.tsx  more-stories.tsx  nav.tsx  post-body.tsx  post-header.tsx  post-preview.tsx  post-title.tsx
db/: db.ts  models.ts
hooks/: handleKeyPress.ts  printiFrame.ts
islands/: AnimatedCarousel.tsx  CalendlyWidget.tsx  Carousel.tsx  ColorMode.tsx  CopyArea.tsx  GradientBackground.tsx  HamburgerNav.tsx  ImageSection.tsx  MobileNav.tsx  NavButtons.tsx  Navbar.tsx  PrintWidget.tsx  Resume.tsx  SearchBar.tsx  SheetsDisplay.tsx  SnareAnimation.tsx  Theme.tsx  ThemeMode.tsx  TypingCodeBlock.tsx
layouts/: ErrorPageLayout.tsx  HomeLayout.tsx  MainLayout.tsx  NotFoundLayout.tsx  ResumeLayout.tsx
lib/: constants.ts
pages/: index.tsx
pkg/: wasm.js  wasm_bg.wasm
plugins/: themeMode.ts
routes/: 404.tsx  500.ts  500.tsx  _404.tsx  _500.tsx  _app.tsx  _layout.tsx  _middleware.ts  about.tsx  blog.tsx  contact.tsx  home.ts  home.tsx  index.ts  index.tsx  license.tsx  mwotw.tsx  privacy-policy.tsx  resume.tsx  sheets.tsx  sitemap.xml.ts
rust/: Cargo.toml  lib.rs  printf.rs
rust/websafe/: Cargo.toml
scripts/: autoprefixer.ts  build-css.ts  build-resume.ts  install.sh  seed.ts
src/: dev.ts  fresh.gen.ts  lib.rs  macros.rs  main.ts  theme_generator.rs
static/: global.css  mit-license.md  privacy-policy.md  resume.md  robots.txt  sheets.json
styles/: global.scss  nunito.scss  resume.scss  tailwind-extended.scss
tasks/: generatePageScreenshots.ts  generateSheetPreviewImages.ts
utils/: Icons.tsx  blogPosts.ts  classNames.ts  fa.tsx  helpers.ts  json.ts  lint-config-options.json  markdown.ts  readFile.ts  screenshot.ts  sheets.ts  theme.ts  twind.ts  version.ts
wasm/: search.generated.js  (+12 more)
(+238 files in other folders)
