[package]
name = "rust"
version = "0.0.0"                                             # dont put a version in the rust crate.
edition = "2018"
license = "GPL-3.0"
authors = ["mark gutenberger <mark-gutenberger@outlook.com>"]
repository = "https://github.com/gutenfries/gutenfries.com"


[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.82"
web-sys = { version = "0.3.59", features = ['console'] }
js-sys = { version = "0.3.59" }
getrandom = { version = "0.2.7", features = ["js"] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
