[package]
name = "rust"
version = "0.0.0"                                             # dont put a version in the rust crate.
edition = "2018"
license = "GPL-3.0"
authors = ["mark gutenberger <mark-gutenberger@outlook.com>"]
repository = "https://github.com/gutenfries/gutenfries.com"


[lib]
crate-type = ["cdylib"]
path = "rust/lib.rs"

[dependencies]
deno_bindgen = "0.7.0"
serde = { version = "1", features = ["derive"] }
getrandom = { version = "0.2.7", features = ["js"] }
object = "0.29.0"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
