[package]
name = "rust"
version = "0.0.0"                                           # dont put a version in the rust crate.
edition = "2018"
license = "GPL-3.0"
authors = ["mark gutenberger <gutenfries@gmail.com>"]
repository = "https://github.com/gutenfries/gutenfries.com"


[lib]
crate-type = ["cdylib"]
path = "rust/lib.rs"

[dependencies]
wasm-bindgen = "0.2.83"
web-sys = { version = "0.3.59", features = ['console'] }
js-sys = { version = "0.3.59" }
getrandom = { version = "0.2.7", features = ["js"] }
pulldown-cmark = { version = "0.9.2", default-features = false, features = [
	"simd",
] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
