[package]
name = "websafe"
version = "0.0.0"
edition = "2018"
license = "GPL-3.0"
authors = ["mark gutenberger <gutenfries@gmail.com>"]
repository = "https://github.com/gutenfries/gutenfries.deno.dev"


[lib]
crate-type = ["cdylib"]
path = "lib.rs"

[dependencies]
wasm-bindgen = "0.2.83"
web-sys = { version = "0.3.60", features = ['console'] }
js-sys = { version = "0.3.60" }
# getrandom = { version = "0.2.7", features = ["js"] }
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }


[dev-dependencies]
wasm-bindgen-test = "0.3.33"
